# Copyright (c) 2020 Intel Corporation
#
# SPDX-License-Identifier: Apache-2.0
#

[package]
name = "kata-agent-ctl"
version = "0.0.1"
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
edition = "2018"

[dependencies]
protocols = { path = "../../src/agent/protocols" }
rustjail = { path = "../../src/agent/rustjail" }
oci = { path = "../../src/agent/oci" }

clap = "2.33.0"
lazy_static = "1.4.0"
anyhow = "1.0.31"
hex = "0.4.2"
byteorder = "1.3.4"

logging = { path = "../../pkg/logging" }
slog = "2.7.0"
slog-scope = "4.4.0"
rand = "0.8.4"
protobuf = "2.14.0"

nix = "0.23.0"
libc = "0.2.112"
# XXX: Must be the same as the version used by the agent
ttrpc = { version = "0.5.0" }

# For parsing timeouts
humantime = "2.1.0"

# For Options (state passing)
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"
