[package]
name = "initdata-processor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = { version = "1.1.1" }
slog = { workspace = true }
slog-term = { workspace = true }
slog-async = "2.8.0"
toml = { workspace = true }

kata-types = { path = "../../libs/kata-types" }

anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
