[package]
name = "initdata-processor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
flate2 = "1.1.5"
slog.workspace = true
slog-term.workspace = true
slog-async = "2.8.0"
toml.workspace = true

# Local dependencies
kata-types.workspace = true

anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true
