[package]
name = "kata-agent-policy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "io-util"] }

anyhow.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true

# Agent Policy
regorus = { version = "0.9.1", default-features = false, features = [
    "arc",
    "base64",
    "base64url",
    "regex",
    "std",
] }
json-patch = "2.0.0"

# POSIX
libc.workspace = true


# Note: this crate sets the slog 'max_*' features which allows the log level
# to be modified at runtime.
slog.workspace = true
slog-scope.workspace = true

# Internal dependencies

protocols = { workspace = true, features = ["with-serde"] }
