[package]
name = "kata-agent-policy"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["fs", "io-util"] }

anyhow.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true

# Agent Policy
#
# Pinned to an upstream commit on `main` instead of a published crate version
# because the 0.9.1 release hard-caps policy lines at 1024 characters and
# files at 1 MiB / 20 000 lines, which rejects realistic policies generated
# by `genpolicy` (e.g. the NVIDIA_REQUIRE_CUDA environment variable on
# `nvcr.io/nvidia/k8s/cuda-sample` images is ~1.3 KiB on a single line).
#
# The pinned commit is microsoft/regorus#624 ("feat: make policy length
# limits configurable per engine"), which adds Engine::set_policy_length_config.
# Switch back to a crates.io version once a release > 0.9.1 containing #624
# is published.
regorus = { git = "https://github.com/microsoft/regorus", rev = "898643129e3652efd43e596f978d99f85e770235", default-features = false, features = [
    "arc",
    "base64",
    "base64url",
    "regex",
    "std",
] }
json-patch = "2.0.0"

# POSIX
libc.workspace = true


# Note: this crate sets the slog 'max_*' features which allows the log level
# to be modified at runtime.
slog.workspace = true
slog-scope.workspace = true

# Internal dependencies

protocols = { workspace = true, features = ["with-serde"] }
