[package]
name = "rustjail"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
awaitgroup = "0.6.0"
serde.workspace = true
serde_json.workspace = true
runtime-spec = { path = "../../libs/runtime-spec" }
oci-spec.workspace = true
protocols = { path = "../../libs/protocols" }
kata-sys-util = { path = "../../libs/kata-sys-util" }
caps = "0.5.0"
nix.workspace = true
scopeguard.workspace = true
capctl.workspace = true
lazy_static.workspace = true
libc.workspace = true
protobuf.workspace = true
slog.workspace = true
slog-scope.workspace = true
scan_fmt.workspace = true
regex.workspace = true
path-absolutize = "1.2.0"
anyhow = "1.0.32"
cgroups.workspace = true
rlimit = "0.5.3"
cfg-if.workspace = true

tokio = { workspace = true, features = [
    "sync",
    "io-util",
    "process",
    "time",
    "macros",
    "rt",
    "fs",
] }
tokio-vsock.workspace = true
futures.workspace = true
async-trait.workspace = true
inotify = "0.9.2"
libseccomp = { version = "0.3.0", optional = true }
zbus = "3.12.0"
bit-vec = "0.6.3"
xattr = "0.2.3"

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true
test-utils = { path = "../../libs/test-utils" }
protocols = { path = "../../libs/protocols" }

[features]
seccomp = ["libseccomp"]
standard-oci-runtime = []
