[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name              = "rustjail"
version           = "0.1.0"

[dependencies]
awaitgroup           = "0.6.0"
serde.workspace      = true
serde_json.workspace = true

anyhow                = "1.0.32"
capctl.workspace      = true
caps                  = "0.5.0"
cfg-if.workspace      = true
cgroups.workspace     = true
lazy_static.workspace = true
libc.workspace        = true
nix.workspace         = true
oci-spec.workspace    = true
path-absolutize       = "1.2.0"
protobuf.workspace    = true
regex.workspace       = true
rlimit                = "0.5.3"
safe-path.workspace   = true
scan_fmt.workspace    = true
scopeguard.workspace  = true
slog.workspace        = true
slog-scope.workspace  = true

async-trait.workspace = true
bit-vec = "0.6.3"
futures.workspace = true
inotify = "0.9.2"
libseccomp = { version = "0.3.0", optional = true }
tokio = { workspace = true, features = [
  "fs",
  "io-util",
  "macros",
  "process",
  "rt",
  "sync",
  "time",
] }
tokio-vsock.workspace = true
xattr = "0.2.3"
zbus = "3.12.0"

# Local dependencies
kata-sys-util.workspace = true
protocols.workspace     = true
runtime-spec.workspace  = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace    = true

# Local dependencies
test-utils.workspace = true

[features]
seccomp              = ["libseccomp"]
standard-oci-runtime = []
