[package]
name = "rustjail"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
awaitgroup = "0.6.0"
serde.workspace = true
serde_json.workspace = true

oci-spec.workspace = true
caps = "0.5.0"
nix.workspace = true
scopeguard.workspace = true
capctl.workspace = true
lazy_static.workspace = true
libc.workspace = true
protobuf.workspace = true
slog.workspace = true
slog-scope.workspace = true
scan_fmt.workspace = true
safe-path.workspace = true
regex.workspace = true
path-absolutize = "1.2.0"
anyhow = "1.0.32"
cgroups.workspace = true
rlimit = "0.5.3"
cfg-if.workspace = true

tokio = { workspace = true, features = [
    "sync",
    "io-util",
    "process",
    "time",
    "macros",
    "rt",
    "fs",
] }
tokio-vsock.workspace = true
futures.workspace = true
async-trait.workspace = true
inotify = "0.9.2"
libseccomp = { version = "0.3.0", optional = true }
zbus = "3.12.0"
bit-vec = "0.8.0"
xattr = "0.2.3"

# Local dependencies
protocols.workspace = true
kata-sys-util.workspace = true
runtime-spec.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true

# Local dependencies
test-utils.workspace = true

[features]
seccomp = ["libseccomp"]
standard-oci-runtime = []
