[package]
name = "kata-security-reference-monitor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ed25519-dalek = { version = "2", default-features = false }
coset = "0.3"
# FR-1d / BL-2: did:x509 issuer identity — X.509 chain parsing + multi-algorithm signature
# verification (ES256/ES384 ECDSA, PS256/RS256 RSA, EdDSA). All pure-Rust (RustCrypto); no Go.
x509-cert = { version = "0.2", default-features = false }
der = { version = "0.7", default-features = false, features = ["alloc"] }
spki = { version = "0.7", default-features = false, features = ["alloc"] }
const-oid = { version = "0.9", default-features = false }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "pkcs8"] }
rsa = { version = "0.9", default-features = false, features = ["sha2"] }
sha2 = { version = "0.10", default-features = false, features = ["oid"] }
base64ct = { version = "1", default-features = false, features = ["alloc"] }
# BL-6: decode SCITT/CCF-profile inclusion proofs (CBOR) from a real transparency ledger.
ciborium = { version = "0.2", default-features = false }

[dev-dependencies]
# Enable the certificate builder + full signers for hermetic FR-1d/BL-2 unit tests
# (mint CA + leaves per algorithm in-process; no openssl, no embedded blobs).
x509-cert = { version = "0.2", default-features = false, features = ["builder"] }
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "pkcs8"] }
p384 = { version = "0.13", default-features = false, features = ["ecdsa", "pem", "pkcs8"] }
rsa = { version = "0.9", default-features = false, features = ["sha2", "pem"] }
ecdsa = { version = "0.16", default-features = false, features = ["der", "alloc", "signing"] }
rand_core = { version = "0.6", features = ["getrandom"] }
