[package]
name = "vsock-exporter"
version = "0.1.0"
authors = ["James O. D. Hunt <james.o.hunt@intel.com>"]
edition.workspace = true
license.workspace = true

[dependencies]
nix.workspace = true
libc.workspace = true
thiserror.workspace = true
opentelemetry = { workspace = true, features = ["serialize"] }
serde.workspace = true
tokio-vsock.workspace = true
bincode = "1.3.3"
byteorder = "1.4.3"
slog = { workspace = true, features = [
    "dynamic-keys",
    "max_level_trace",
    "release_max_level_debug",
] }
async-trait.workspace = true
tokio.workspace = true
