[package]
authors           = ["James O. D. Hunt <james.o.hunt@intel.com>"]
edition.workspace = true
license.workspace = true
name              = "vsock-exporter"
version           = "0.1.0"

[dependencies]
async-trait.workspace = true
bincode = "1.3.3"
byteorder = "1.4.3"
libc.workspace = true
opentelemetry = { workspace = true, features = ["serialize"] }
slog = { workspace = true, features = [
  "dynamic-keys",
  "max_level_trace",
  "release_max_level_debug",
] }
thiserror.workspace = true
tokio.workspace = true
tokio-vsock.workspace = true
