[package]
authors     = ["Alibaba Dragonball Team"]
description = "address space manager for virtual machines."
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["address", "dragonball", "secure-sandbox", "vmm"]
license     = "Apache-2.0"
name        = "dbs-address-space"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox"
version     = "0.3.0"

[dependencies]
arc-swap     = ">=0.4.8"
lazy_static  = "1"
libc         = "0.2.39"
nix          = "0.23.1"
thiserror    = "1"
vm-memory    = { workspace = true, features = ["backend-atomic", "backend-mmap"] }
vmm-sys-util = { workspace = true }
