[package]
name = "dbs-allocator"
version = "0.1.1"
authors = ["Liu Jiang <gerry@linux.alibaba.com>"]
description = "a resource allocator for virtual machine manager"
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball"]
readme = "README.md"

[dependencies]
thiserror = "1.0"
