[package]
authors     = ["Liu Jiang <gerry@linux.alibaba.com>"]
description = "a resource allocator for virtual machine manager"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["dragonball"]
license     = "Apache-2.0"
name        = "dbs-allocator"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox"
version     = "0.1.1"

[dependencies]
thiserror = "1.0"
