[package]
authors     = ["Alibaba Dragonball Team"]
description = "A collection of CPU architecture specific constants and utilities."
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["ARM64", "arch", "dragonball", "secure-sandbox", "x86"]
license     = "Apache-2.0 AND BSD-3-Clause"
name        = "dbs-arch"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox"
version     = "0.2.3"

[dependencies]
kvm-bindings = { workspace = true, features = ["fam-wrappers"] }
kvm-ioctls   = { workspace = true }
libc         = ">=0.2.39"
memoffset    = "0.6"
thiserror    = "1"
vm-memory    = { workspace = true }
vmm-sys-util = { workspace = true }

[dev-dependencies]
vm-memory = { workspace = true, features = ["backend-mmap"] }

[package.metadata.docs.rs]
all-features = true
