[package]
name = "dbs-boot"
version = "0.4.0"
authors = ["Alibaba Dragonball Team"]
description = "Traits and structs for booting sandbox"
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "boot", "VMM"]
readme = "README.md"

[dependencies]
dbs-arch = { workspace = true }
kvm-bindings = { workspace = true, features = ["fam-wrappers"] }
kvm-ioctls = {workspace = true}
lazy_static = "1"
libc = "0.2.39"
thiserror = "1"
vm-memory = {workspace = true}
vm-fdt = {workspace= true}

[dev-dependencies]
vm-memory = { workspace = true, features = ["backend-mmap"] }
device_tree = ">=1.1.0"
dbs-device = { workspace = true }
