[package]
authors     = ["Alibaba Dragonball Team"]
description = "Traits and structs for booting sandbox"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["VMM", "boot", "dragonball"]
license     = "Apache-2.0 AND BSD-3-Clause"
name        = "dbs-boot"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox"
version     = "0.4.0"

[dependencies]
dbs-arch     = { workspace = true }
kvm-bindings = { workspace = true, features = ["fam-wrappers"] }
kvm-ioctls   = { workspace = true }
lazy_static  = "1"
libc         = "0.2.39"
thiserror    = "1"
vm-fdt       = { workspace = true }
vm-memory    = { workspace = true }

[dev-dependencies]
dbs-device  = { workspace = true }
device_tree = ">=1.1.0"
vm-memory   = { workspace = true, features = ["backend-mmap"] }
