[package]
name = "dbs-device"
version = "0.2.0"
authors = ["Alibaba Dragonball Team"]
description = "Device model for Dragonball Sandbox"
license = "Apache-2.0"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-device"
keywords = ["dragonball", "secure-sandbox", "device", "resource"]
readme = "README.md"

[dependencies]
thiserror = "1"
