[package]
authors     = ["Alibaba Dragonball Team"]
description = "Device model for Dragonball Sandbox"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["device", "dragonball", "resource", "secure-sandbox"]
license     = "Apache-2.0"
name        = "dbs-device"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-device"
version     = "0.2.0"

[dependencies]
thiserror = "1"
