[package]
authors     = ["Alibaba Dragonball Team"]
description = "Traits and structs to manage interrupts for virtual devices"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["device", "dragonball", "interrupt", "secure-sandbox"]
license     = "Apache-2.0"
name        = "dbs-interrupt"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-interrupt"
version     = "0.2.2"

[dependencies]
dbs-arch     = { workspace = true }
dbs-device   = { workspace = true }
kvm-bindings = { workspace = true, optional = true }
kvm-ioctls   = { workspace = true, optional = true }
libc         = "0.2"
vmm-sys-util = { workspace = true }

[features]
default = ["legacy-irq", "msi-irq"]

legacy-irq = []
msi-irq    = []

kvm-irq         = ["kvm-bindings", "kvm-ioctls"]
kvm-legacy-irq  = ["kvm-irq", "legacy-irq"]
kvm-msi-generic = ["kvm-irq", "msi-irq"]
kvm-msi-irq     = ["kvm-msi-generic"]
