[package]
name = "dbs-legacy-devices"
version = "0.1.1"
authors = ["Alibaba Dragonball Team"]
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2018"
description = "dbs-legacy-devices provides emulation for legacy devices."
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "secure-sandbox", "devices", "legacy"]
readme = "README.md"

[dependencies]
dbs-device = { workspace = true }
dbs-utils = { workspace = true }
libc = "0.2.39"
log = "0.4.14"
serde = { version = "1.0.27", features = ["derive", "rc"] }
vm-superio = {workspace = true}
vmm-sys-util = {workspace = true}

[dev-dependencies]
libc = "0.2.39"
