[package]
authors     = ["Alibaba Dragonball Team"]
description = "dbs-pci is a crate for emulating pci device"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["devices", "dragonball", "pci", "secure-sandbox"]
license     = "Apache-2.0"
name        = "dbs-pci"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-pci"
version     = "0.1.0"

[dependencies]
byteorder = "1.4.3"
dbs-allocator = { workspace = true }
dbs-boot = { workspace = true }
dbs-device = { workspace = true }
dbs-interrupt = { workspace = true, features = [
  "kvm-irq",
  "kvm-legacy-irq",
  "kvm-msi-irq",
] }
downcast-rs = "1.2.0"
kvm-bindings = { workspace = true }
kvm-ioctls = { workspace = true }
libc = "0.2.39"
log = "0.4.14"
thiserror = "1"
vfio-bindings = { workspace = true }
vfio-ioctls = { workspace = true }
vm-memory = { workspace = true }

[dev-dependencies]
dbs-arch   = { workspace = true }
kvm-ioctls = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(feature, values("test-mock"))',
] }
