[package]
name = "dbs-tdx"
version = "0.1.0"
authors = ["Alibaba Dragonball Team"]
description = "helpers and utilities to create TDX VM"
license = "Apache-2.0 AND BSD-3-Clause"
edition = "2018"
homepage = "https://github.com/openanolis/dragonball-sandbox"
repository = "https://github.com/openanolis/dragonball-sandbox"
keywords = ["dragonball", "secure-sandbox", "TDX", "confidential container"]
readme = "README.md"

[dependencies]
thiserror = "1.0"
kvm-bindings = { version = "0.6.0", features = ["fam-wrappers"] }
vmm-sys-util = "0.11.0"

[dev-dependencies]
serde_json = "1.0.9"
