[package]
authors     = ["Alibaba Dragonball Team"]
description = "helpers and utilities to create TDX VM"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["TDX", "confidential container", "dragonball", "secure-sandbox"]
license     = "Apache-2.0 AND BSD-3-Clause"
name        = "dbs-tdx"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox"
version     = "0.1.0"

[dependencies]
kvm-bindings = { workspace = true, features = ["fam-wrappers"] }
thiserror    = "1.0"
vmm-sys-util = { workspace = true }

[dev-dependencies]
serde_json = "1.0.9"
