[package]
authors     = ["Alibaba Dragonball Team"]
description = "dbs-upcall is a direct communication tool between VMM and guest"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["devices", "dragonball", "secure-sandbox", "upcall", "virtio"]
license     = "Apache-2.0"
name        = "dbs-upcall"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-virtio-devices"
version     = "0.3.0"

[dependencies]
anyhow    = "1"
log       = "0.4.14"
thiserror = "1"
timerfd   = "1.2.0"

dbs-utils          = { workspace = true }
dbs-virtio-devices = { workspace = true, features = ["virtio-vsock"] }
