[package]
authors     = ["Alibaba Dragonball Team"]
description = "helpers and utilities used by dragonball-sandbox components"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["dragonball", "secure-sandbox", "utils"]
license     = "Apache-2.0 AND BSD-3-Clause"
name        = "dbs-utils"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox"
version     = "0.2.1"

[dependencies]
anyhow        = "1.0"
event-manager = { workspace = true, features = ["remote_endpoint"] }
libc          = "0.2.39"
log           = "0.4.14"
serde         = { version = "1.0.27", features = ["derive", "rc"] }
thiserror     = "1.0"
timerfd       = "1.0"
vmm-sys-util  = { workspace = true }

[dev-dependencies]
serde_json = "1.0.9"
