[package]
authors     = ["Alibaba Dragonball Team"]
description = "Virtio device backend driver framework and device drivers"
edition     = "2018"
homepage    = "https://github.com/openanolis/dragonball-sandbox"
keywords    = ["devices", "dragonball", "secure-sandbox", "virtio"]
license     = "Apache-2.0 AND BSD-3-Clause"
name        = "dbs-virtio-devices"
readme      = "README.md"
repository  = "https://github.com/openanolis/dragonball-sandbox/tree/main/crates/dbs-virtio-devices"
version     = "0.3.1"

[dependencies]
byteorder = "1.4.3"
caps = "0.5.3"
dbs-address-space = { workspace = true }
dbs-boot = { workspace = true }
dbs-device = { workspace = true }
dbs-interrupt = { workspace = true, features = [
  "kvm-legacy-irq",
  "kvm-msi-irq",
] }
dbs-utils = { workspace = true }
epoll = ">=4.3.1, <4.3.2"
fuse-backend-rs = { version = "0.10.5", optional = true }
io-uring = "0.5.2"
kvm-bindings = { workspace = true }
kvm-ioctls = { workspace = true }
libc = "0.2.119"
log = "0.4.14"
nix = "0.24.3"
nydus-api = "0.3.1"
nydus-rafs = "0.3.2"
nydus-storage = "0.6.4"
rlimit = "0.7.0"
sendfd = "0.4.3"
serde = "1.0.27"
serde_json = "1.0.9"
thiserror = "1"
threadpool = "1"
timerfd = "1.0"
vhost-rs = { version = "0.6.1", package = "vhost", optional = true }
virtio-bindings = { workspace = true }
virtio-queue = { workspace = true }
vm-memory = { workspace = true, features = ["backend-mmap"] }
vmm-sys-util = { workspace = true }

[dev-dependencies]
vm-memory = { workspace = true, features = ["backend-atomic", "backend-mmap"] }

[features]
vhost = ["vhost-rs/vhost-kern", "vhost-rs/vhost-user-master", "virtio-mmio"]
vhost-net = ["vhost", "vhost-rs/vhost-net"]
vhost-user = ["vhost"]
vhost-user-blk = ["vhost-user"]
vhost-user-fs = ["vhost-user"]
vhost-user-net = ["vhost-user"]
virtio-balloon = ["virtio-mmio"]
virtio-blk = ["virtio-mmio"]
virtio-fs = ["fuse-backend-rs/virtiofs", "nydus-rafs/virtio-fs", "virtio-mmio"]
virtio-fs-pro = [
  "nydus-storage/backend-oss",
  "nydus-storage/backend-registry",
  "virtio-fs",
]
virtio-mem = ["virtio-mmio"]
virtio-mmio = []
virtio-net = ["virtio-mmio"]
virtio-vsock = ["virtio-mmio"]
